bison.output
Terminals unused in grammar

   BOOLEAN


State 25 conflicts: 1 shift/reduce


Grammar

    0 $accept: llista_de_sentencies $end

    1 llista_de_sentencies: llista_de_sentencies sentencia
    2                     | sentencia

    3 sentencia: assignacio
    4          | expressio_aritmetica
    5          | expressio_booleana
    6          | ID

    7 assignacio: ID ASSIGN expressio_aritmetica
    8           | ID ASSIGN expressio_booleana

    9 expressio_aritmetica: expressio_aritmetica OP_ARITMETIC expressio_aritmetica
   10                     | literal

   11 expressio_booleana: expressio_booleana OP_BOOL condicional
   12                   | condicional

   13 condicional: INTEGER OP_RELACIONAL INTEGER
   14            | FLOAT OP_RELACIONAL FLOAT

   15 literal: INTEGER
   16        | FLOAT
   17        | STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
ASSIGN (258) 7 8
OP_ARITMETIC (259) 9
OP_RELACIONAL (260) 13 14
OP_BOOL (261) 11
INTEGER (262) 13 15
FLOAT (263) 14 16
STRING (264) 17
BOOLEAN (265)
ID (266) 6 7 8


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
llista_de_sentencies (13)
    on left: 1 2, on right: 0 1
sentencia (14)
    on left: 3 4 5 6, on right: 1 2
assignacio (15)
    on left: 7 8, on right: 3
expressio_aritmetica (16)
    on left: 9 10, on right: 4 7 9
expressio_booleana (17)
    on left: 11 12, on right: 5 8 11
condicional (18)
    on left: 13 14, on right: 11 12
literal (19)
    on left: 15 16 17, on right: 10


state 0

    0 $accept: . llista_de_sentencies $end

    INTEGER  shift, and go to state 1
    FLOAT    shift, and go to state 2
    STRING   shift, and go to state 3
    ID       shift, and go to state 4

    llista_de_sentencies  go to state 5
    sentencia             go to state 6
    assignacio            go to state 7
    expressio_aritmetica  go to state 8
    expressio_booleana    go to state 9
    condicional           go to state 10
    literal               go to state 11


state 1

   13 condicional: INTEGER . OP_RELACIONAL INTEGER
   15 literal: INTEGER .

    OP_RELACIONAL  shift, and go to state 12

    $default  reduce using rule 15 (literal)


state 2

   14 condicional: FLOAT . OP_RELACIONAL FLOAT
   16 literal: FLOAT .

    OP_RELACIONAL  shift, and go to state 13

    $default  reduce using rule 16 (literal)


state 3

   17 literal: STRING .

    $default  reduce using rule 17 (literal)


state 4

    6 sentencia: ID .
    7 assignacio: ID . ASSIGN expressio_aritmetica
    8           | ID . ASSIGN expressio_booleana

    ASSIGN  shift, and go to state 14

    $default  reduce using rule 6 (sentencia)


state 5

    0 $accept: llista_de_sentencies . $end
    1 llista_de_sentencies: llista_de_sentencies . sentencia

    $end     shift, and go to state 15
    INTEGER  shift, and go to state 1
    FLOAT    shift, and go to state 2
    STRING   shift, and go to state 3
    ID       shift, and go to state 4

    sentencia             go to state 16
    assignacio            go to state 7
    expressio_aritmetica  go to state 8
    expressio_booleana    go to state 9
    condicional           go to state 10
    literal               go to state 11


state 6

    2 llista_de_sentencies: sentencia .

    $default  reduce using rule 2 (llista_de_sentencies)


state 7

    3 sentencia: assignacio .

    $default  reduce using rule 3 (sentencia)


state 8

    4 sentencia: expressio_aritmetica .
    9 expressio_aritmetica: expressio_aritmetica . OP_ARITMETIC expressio_aritmetica

    OP_ARITMETIC  shift, and go to state 17

    $default  reduce using rule 4 (sentencia)


state 9

    5 sentencia: expressio_booleana .
   11 expressio_booleana: expressio_booleana . OP_BOOL condicional

    OP_BOOL  shift, and go to state 18

    $default  reduce using rule 5 (sentencia)


state 10

   12 expressio_booleana: condicional .

    $default  reduce using rule 12 (expressio_booleana)


state 11

   10 expressio_aritmetica: literal .

    $default  reduce using rule 10 (expressio_aritmetica)


state 12

   13 condicional: INTEGER OP_RELACIONAL . INTEGER

    INTEGER  shift, and go to state 19


state 13

   14 condicional: FLOAT OP_RELACIONAL . FLOAT

    FLOAT  shift, and go to state 20


state 14

    7 assignacio: ID ASSIGN . expressio_aritmetica
    8           | ID ASSIGN . expressio_booleana

    INTEGER  shift, and go to state 1
    FLOAT    shift, and go to state 2
    STRING   shift, and go to state 3

    expressio_aritmetica  go to state 21
    expressio_booleana    go to state 22
    condicional           go to state 10
    literal               go to state 11


state 15

    0 $accept: llista_de_sentencies $end .

    $default  accept


state 16

    1 llista_de_sentencies: llista_de_sentencies sentencia .

    $default  reduce using rule 1 (llista_de_sentencies)


state 17

    9 expressio_aritmetica: expressio_aritmetica OP_ARITMETIC . expressio_aritmetica

    INTEGER  shift, and go to state 23
    FLOAT    shift, and go to state 24
    STRING   shift, and go to state 3

    expressio_aritmetica  go to state 25
    literal               go to state 11


state 18

   11 expressio_booleana: expressio_booleana OP_BOOL . condicional

    INTEGER  shift, and go to state 26
    FLOAT    shift, and go to state 27

    condicional  go to state 28


state 19

   13 condicional: INTEGER OP_RELACIONAL INTEGER .

    $default  reduce using rule 13 (condicional)


state 20

   14 condicional: FLOAT OP_RELACIONAL FLOAT .

    $default  reduce using rule 14 (condicional)


state 21

    7 assignacio: ID ASSIGN expressio_aritmetica .
    9 expressio_aritmetica: expressio_aritmetica . OP_ARITMETIC expressio_aritmetica

    OP_ARITMETIC  shift, and go to state 17

    $default  reduce using rule 7 (assignacio)


state 22

    8 assignacio: ID ASSIGN expressio_booleana .
   11 expressio_booleana: expressio_booleana . OP_BOOL condicional

    OP_BOOL  shift, and go to state 18

    $default  reduce using rule 8 (assignacio)


state 23

   15 literal: INTEGER .

    $default  reduce using rule 15 (literal)


state 24

   16 literal: FLOAT .

    $default  reduce using rule 16 (literal)


state 25

    9 expressio_aritmetica: expressio_aritmetica . OP_ARITMETIC expressio_aritmetica
    9                     | expressio_aritmetica OP_ARITMETIC expressio_aritmetica .

    OP_ARITMETIC  shift, and go to state 17

    OP_ARITMETIC  [reduce using rule 9 (expressio_aritmetica)]
    $default      reduce using rule 9 (expressio_aritmetica)


state 26

   13 condicional: INTEGER . OP_RELACIONAL INTEGER

    OP_RELACIONAL  shift, and go to state 12


state 27

   14 condicional: FLOAT . OP_RELACIONAL FLOAT

    OP_RELACIONAL  shift, and go to state 13


state 28

   11 expressio_booleana: expressio_booleana OP_BOOL condicional .

    $default  reduce using rule 11 (expressio_booleana)
